[package]
name = "not-git"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = "1.0"
sha1 = "0.10.6"
reqwest = { version = "0.11.13", features = ["json", "blocking"] }
tokio = { version = "1.23.0", features = ["full"] }
hex = "0.4.3"
anyhow = "1.0.59"
thiserror = "1.0.32"
bytes = "1.3.0"

[dev-dependencies]
uuid = { version = "1.8.0", features = ["v4"] }
